spacing fixes 3

--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,6 @@ body { margin: 0; }
     margin: 0;
     padding: 0;
     background-color: #FAFCF7;
-    background-size: cover;
     height: 300px;
 }
 
